2010-09-23 Sasa Bojanic <sasaboy@together.at>
   # Added docbookx.dtd and other files required to make a local reference to DTD from twe-doc.xml docbook file
   # Build docu procedure changed (copying docbook required files, and not removing DOCTYPE from twe-doc.xml anymore)
   
2010-09-21 Sasa Bojanic <sasaboy@together.at>
   # Fixed some typos
   # Improved build procedure so it doesn't fail if sign.properties file does not contain right information
   
2010-09-20 Sasa Bojanic <sasaboy@together.at>
   # dependency_tws: addeed twe.zip and twe.tar.gz files
   # build guide updated with the part related to sign.properties
   
2010-09-16 Sasa Bojanic <sasaboy@together.at>
   # Branding context and build procedure updated

2010-09-15 Sasa Bojanic <sasaboy@together.at>
   # removed -optimized parameter for configure script
   # improved configure scripts for windows and linux
   # added section into documentation about all possible configure/make targets
   # twe-includes.xlsx updated
   # batik-xxx.jar files removed from the project (using batik.jar comming with FOP) - build scripts modified

2010-09-13 Sasa Bojanic <sasaboy@together.at>
   # Added new XPDL samples

2010-09-10 Sasa Bojanic <sasaboy@together.at>
   # fix: issues with defining Record and Union type variables
   
2010-09-09 Sasa Bojanic <sasaboy@together.at>
   # twe-doc-current.pdf is now not packed in the zip, but just ends up into community folder like that
   # program group entry for API docu removed
   # updated docbook docu

2010-09-08 Sasa Bojanic <sasaboy@together.at>
   # twe-doc-current.html removed from docu
   # docu in documentation folder of the distribution is now unpacked

2010-09-07 Sasa Bojanic <sasaboy@together.at>
   # fixed docbook docu and build scripts to solve picture and table sizing issues in PDFs
   # added TAS dependency build (the zip file which is same as a normal but with a twe.zip name)

2010-09-03 Sasa Bojanic <sasaboy@together.at>