@@ -1,10 +1,10 @@
 <HTML>
    <HEAD>
       <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=windows-1252"/>
-      <TITLE>Title</TITLE>
+      <TITLE>Together Workflow Editor @VERSION@-@RELEASE@ Web Start</TITLE>
    </HEAD>
    <BODY>
-      <a href="twe.jnlp"><img src="images/webstart.jpg" alt="Web Start for Together Workflow Editor" border="0"></a>
+      <a href="twe.jnlp"><img src="images/webstart.jpg" alt="Together Workflow Editor @VERSION@-@RELEASE@ Web Start" border="0"></a>
 <!-- <SCRIPT LANGUAGE="Javascript">insertLink("twehome.jnlp", "Click here to start your Web Start Application")</SCRIPT> -->
 </BODY>
 </HTML>
