@@ -203,7 +203,7 @@ ExternalProcessesMnemonic = o
 ExternalProcessesAccel = SHIFT-ALT-O
 ExternalProcessesTooltip = Display external process list
 
-HelpAboutLabel=About Together Workflow Editor ...
+HelpAboutLabel=About
 HelpAboutMnemonic=a
 HelpAboutAccel=ALT-F1
 
@@ -850,7 +850,7 @@ ERROR_PRIORITY_INVALID_VALUE=Invalid value for the priority
 
 ############################# MISC  #######################################
 ##### About Frame
-AboutFrameTitle=About Together Workflow Editor ...
+AboutFrameTitle=About Together Workflow Editor
 LicenseKey=License
 
 ##### LDAP
