@@ -202,7 +202,7 @@ ExternalProcessesMnemonic = c
 ExternalProcessesAccel = SHIFT-ALT-O
 ExternalProcessesTooltip = Prikaz eksternih procesa
 
-HelpAboutLabel = O TWE...
+HelpAboutLabel = O aplikaciji
 HelpAboutMnemonic = o
 HelpAboutAccel=ALT-F1
 
@@ -869,7 +869,7 @@ ERROR_PRIORITY_INVALID_VALUE=Nedozvoljena vrednost za prioritet
 
 ############################# MISC  #######################################
 ##### About Frame
-AboutFrameTitle = O TWE-u...
+AboutFrameTitle = O Together Workflow Editoru
 LicenseKey=Licenca
 
 ##### LDAP
